RESOLVED FIXED195086
REGRESSION: WebKit content crash in Base System (because NSAppearance is NULL)
https://bugs.webkit.org/show_bug.cgi?id=195086
Summary REGRESSION: WebKit content crash in Base System (because NSAppearance is NULL)
Timothy Hatcher
Reported 2019-02-26 19:11:52 PST
We need to not return a NULL result to the -effectiveAppearanceForScrollerImp: delegate.
Attachments
Patch (3.62 KB, patch)
2019-02-26 19:14 PST, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2019-02-26 19:12:02 PST
Timothy Hatcher
Comment 2 2019-02-26 19:14:50 PST
WebKit Commit Bot
Comment 3 2019-02-27 08:59:14 PST
Comment on attachment 363058 [details] Patch Clearing flags on attachment: 363058 Committed r242128: <https://trac.webkit.org/changeset/242128>
WebKit Commit Bot
Comment 4 2019-02-27 08:59:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.