REGRESSION: WebKit content crash in Base System (because NSAppearance is NULL). https://bugs.webkit.org/show_bug.cgi?id=195086 rdar://problem/48419124

Reviewed by Tim Horton.

Source/WebCore:

* platform/mac/ScrollAnimatorMac.mm:
(-[WebScrollerImpDelegate effectiveAppearanceForScrollerImp:]): Always return a valid NSAppearance.

Source/WebKit:

* UIProcess/RemoteLayerTree/mac/ScrollerMac.mm:
(-[WKScrollerImpDelegate effectiveAppearanceForScrollerImp:]): Always return a valid NSAppearance.


Canonical link: https://commits.webkit.org/209447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242128 268f45cc-cd09-0410-ab3c-d52691b4dbfc